Added back buttons and changed date/time format

--- a/views/edit.pug
+++ b/views/edit.pug
@@ -9,3 +9,4 @@ block content
   form(action=`/delete/${post.id}`, method="POST")
     button(type="submit", class="danger") Delete Post
 
+  button(type="button", onclick="window.history.back()") Back
