--- a/views/stats.pug
+++ b/views/stats.pug
@@ -8,3 +8,5 @@ block content
   br
   p Total length of all posts: #{total_length.toFixed(2)} characters
 
+  div(style="margin-top: 20px")
+    button(type="button", onclick="window.history.back()") Back
