--- a/views/create.pug
+++ b/views/create.pug
@@ -7,3 +7,6 @@ block content
     textarea(name="content", placeholder="Content", required)
     button(type="submit") Create
 
+    div(style="margin-top: 20px")
+      button(type="button", onclick="window.history.back()") Back
+
